--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "recharts": "^2.12.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
