--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "react": "^18",
