--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "recharts": "^2.12.0",
