--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "recharts": "^2.12.0",
     "xlsx": "^0.18.5",
     "zustand": "^4.5.0"
