--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
+    "primereact": "^10.5.1",
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
