--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
+    "echarts": "^5.5.0",
+    "echarts-for-react": "^3.0.2",
     "framer-motion": "^11.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
